add configuration API
